<resources>
    <string name="app_name">Bionyx</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_dashboard">Main Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="reminders">REMINDERS</string>
    <string name="beforeTakePicture">Before taking fingernail images:</string>
    <string name="warning">WARNING!</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="read_instructions">Please read the instructions carefully.</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="takenote">Take note</string>
    <string name="beausline">
        \t\tBeaus lines are indentations that run across the nails. The indentations can appear when growth at the area under the cuticle is interrupted by injury or severe illness.\n
        \n\t\tConditions associated with Beaus lines include uncontrolled diabetes and peripheral vascular disease, as well as illnesses associated with a high fever, such as scarlet fever, measles, mumps and pneumonia. Beaus lines can also be a sign of zinc deficiency.\n
    </string>

    <string name="clubbed_nail">
        \t\tNail clubbing occurs when the tips of the fingers enlarge and the nails curve around the fingertips, usually over the course of years.\n
        \n\t\tNail clubbing is sometimes the result of low oxygen in the blood and could be a sign of various types of lung disease. Nail clubbing is also associated with inflammatory bowel disease, cardiovascular disease, liver disease and AIDS.\n
    </string>

    <string name="spoon_nail">
        \t\tSpoon-shaped or spooning fingernails refers to a concavity in the fingernail itself, resulting in a depression in the nail that gives an appearance of a spoon shape to the entire nail. This growth disturbance in the nail is medically known as koilonychia. The spooning is typically such that a water droplet may be placed and held in the depression within the nail.\n
        \n\t\tThis pattern can sometimes be seen in normal infants, but it disappears as the child ages. Koilonychia is a component of the nail-patella syndrome, a genetic disease characterized by numerous abnormalities including musculoskeletal and kidney abnormalities.Spooning fingernails can also result from trauma, exposure to certain solvents, or it may be associated with chronic medical conditions. In particular, koilonychias is associated with iron deficiency.\n
    </string>


    <string name="terry_nail">
        \t\tWith the condition known as Terrys nails, most of the nails appear white except for a narrow pink band at the tip.\n
        \n\t\tTerrys nails can sometimes be attributed to aging. In other cases, Terrys nails can be a sign of a serious underlying condition, such as liver disease, congestive heart failure, kidney failure or diabetes.\n
    </string>


    <string name="yello_nail">
        \t\tWith yellow nail syndrome, nails thicken and new growth slows. This results in a yellowish discoloration of the nails.\n
        \n\t\tNails affected by yellow nail syndrome might lack a cuticle and detach from the nail bed in places. Yellow nail syndrome is often a sign of respiratory disease, such as chronic bronchitis. Yellow nail syndrome can also be related to swelling of the hands (lymphedema).\n
    </string>

    <string name="about_bionyx">
        \t\tBionyx is an application that captures fingernail images to analyze nail color and patterns for possible disease identification.\n
    </string>

    <string name="lighting">
        \t\tThere should be an <b><i>ADEQUATE LIGHTING</i></b>. Sunlight or daylight is the preferred source. <b><i>PREVENT</i></b> capturing images with glare.\n
    </string>

    <string name="no_nailpolish">
        \t\tAll nail polish, lacquer or other topical substances should be <b><i>REMOVED</i></b>.\n
    </string>

    <string name="acetone">
        \t\tThe surface of the fingernail should be <b><i>CLEANSED</i></b> with solution such as alcohol or acetone.\n
    </string>

    <string name="not_pressed">
        When taking picture, the patient’s finger should be <b><i>RELAXED</i></b> and not pressed <b><i>HARDLY</i></b> against any surface.
    </string>

    <string name="capture_image">
        \tTap the <b><i>TAKE PICTURE</i></b> button to capture fingernail image.
        When taking fingernail image, <b><i>MAKE SURE TO FOCUS THE CAMERA TO THE FINGERNAIL SURFACE</i></b>. \n
    </string>

    <string name="crop_image">
        \t<b><i>CROP</i></b>  the image of the fingernail\'s surface and ensure that the fingernail\'s image orientation is horizontally upward.\n
    </string>

    <string name="process_image">
        \t\tTap the <b><i>PROCESS</i></b> button to process the fingernail image and wait for the result.\n
    </string>

    <string name="take_note">
        This procedure is similar to other laboratory tests that are requested by physicians.
        It is meant to help assist in arriving at an impression or a diagnosis; however, the final disposition of the patient remains with the doctor.
        Whatever result this app shows, it is still best to consult a physician.\n
    </string>

    <string name="dialog_note">
        <b>Note</b> : This procedure is similar to other laboratory tests that are requested by physicians.
        It is meant to help assist in arriving at an impression or a diagnosis; however, the final disposition of the patient remains with the doctor.
        Whatever result this app shows, it is still best to consult a physician.\n
    </string>

    <string name="do_not_capture">
        \t\tAny images aside from fingernail image is <b><i>PROHIBITED</i></b>.
        <b><i>INJURED</i></b> and <b><i>PAINTED</i></b> fingernail is also <b><i>PROHIBITED</i></b> since it may alter the result of the prognosis.\n
    </string>

    <string name="white_background">
        \t\tIt is preferred to use <b><i>WHITE BACKGROUND</i></b> when taking fingernail image.\n
    </string>

    <string name="need_wifi">
        \t\tMake sure that the mobile phone is <b><i>CONNECTED TO THE INTERNET</i></b> to process the image and have result of prognosis.\n
    </string>

    <string name="rt_lighting">
        \t\tThere should be an <b><i>ADEQUATE LIGHTING</i></b>. Sunlight or daylight is the preferred source. <b><i>PREVENT</i></b> detecting images with glare.\n
    </string>

    <string name="rt_alignment">
        \t Ensure that the fingernail\'s orientation of the user is <b><i>HORIZONTALLY UPWARD</i></b>.\n
    </string>

    <string name="rt_focus">
        \t Wait until the camera is <b><i>FOCUSED</i></b> on the fingernail of the user to be able to detect properly\n
    </string>

    <string name="rt_white_background">
        \t\tIt is preferred to use <b><i>WHITE BACKGROUND</i></b> when using real-time detection of fingernail.\n
    </string>

    <string name="rt_warning">
        \t\tThe Real-time feature of the application gives possible diseases associated to the detected nail disorder.
        However, the result of the real-time feature is <b><i>NOT RECORDED</i></b> to the history of the application\n
    </string>

    <string name="instruction">
        Tap <b><i>TAKE PICTURE</i></b> button to capture fingernail image, <b><i>CROP</i></b> image, <b><i>ALIGN</i></b> fingernail horizontally upward and tap <b><i>PROCESS</i></b> button and wait for the result.
    </string>

    <string name="tool_instruction">
        1.) When taking picture, the patient\'s should be <b><i>RELAXED</i></b> and not pressed <b><i>HARDLY</i></b> against any surface.\n
        \n2.) It is preferred to use <b><i>WHITE BACKGROUND</i></b> when taking fingernail image.\n
        \n3.) Tap the <b><i>TAKE PICTURE</i></b> button to capture fingernail image. When taking fingernail image, <b><i>MAKE SURE TO FOCUS THE CAMERA TO THE FINGERNAIL SURFACE</i></b>\n
        \n4.) <b><i>CROP</i></b> the image of the fingernail\'s surface and ensure that the fingernail\'s image orientation is <b><i>HORIZONTALLY UPWARD</i></b>.\n
        \n5.) Tap <b><i>PROCESS</i></b> button and wait for the result.\n
    </string>


    <string name="title_activity_about">About Bionyx</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_developer">About Bionyx</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Hello</string>
</resources>

