<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/navdrawer_home"
            android:title="@string/home"
            android:fontFamily="@font/montserrat"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/navdrawer_profile"
            android:title="@string/profile"
            android:fontFamily="@font/montserrat"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/navdrawer_history"
            android:title="@string/about"
            android:fontFamily="@font/montserrat" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/navdrawer_logout"
            android:title="Logout"
            android:fontFamily="@font/montserrat"/>
    </group>

</menu>
